# sparkle_auto_updater

./: LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: SparkleAutoUpdater.md  index.md
examples/sparkle_auto_updater_example/: pyproject.toml
examples/sparkle_auto_updater_example/src/: main.py
src/flutter/sparkle_auto_updater/: README.md  pubspec.yaml
src/flutter/sparkle_auto_updater/lib/: sparkle_auto_updater.dart
src/flutter/sparkle_auto_updater/lib/src/: create_control.dart  sparkle_auto_updater.dart
src/sparkle_auto_updater/: __init__.py  sparkle_auto_updater.py
